Fixed npm command in deploy workflow

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Install Packages
               run: npm install
             - name: Perform linting
-              run: num run lint:fix
+              run: npm run lint:fix
             - name: Deploy Application to GH Pages
               run: |
                   git config user.email ${{ secrets.EMAIL }}
